--- a/payment-success.html
+++ b/payment-success.html
@@ -17,6 +17,7 @@
         <div class="top-header">
             <img src="src/img/logo.png" alt="GoodWire Logo">
             <h1>GoodWire</h1>
+            <p>New or used, we're making an impact.</p>
         </div>
         <div class="order-placed-backdrop">
             <div class="order-placed">
