Improved registration and navigation

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -8,10 +8,10 @@
         <script src="https://kit.fontawesome.com/f7c8be4779.js" crossorigin="anonymous"></script>
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
-        <link rel="stylesheet" href="src/css/account.css">
+        <link rel="stylesheet" href="src/css/login.css">
         <title>GoodWire | Account</title>
     </head>
-    <body>
+<body>
     <div class="index">
         <div class="navbar">
             <div class="navbar-top">
@@ -85,17 +85,40 @@
                 </div>
             </div>
         </div>
-        <div class="account-content">
-            <div class="profile-card">
-                <div class="profile-content">
-                    <div class="profile-image">
-                        <img src="src/img/logo.png" alt="profile">
+        <div class="login-form">
+            <form class="login">
+                <h1>Forgot Password</h1>
+                <p id="description">Let's get you back on track, we'll need some information first</p>
+                <div class="inputs">
+                    <div class="input">
+                        <label id="email-label" for="email">Email Address</label>
+                        <input type="email" name="email" id="email" placeholder="Enter your email">
+                        <input style="width: 50%; display: none;" name="code" id="code" maxlength="6" placeholder="Enter your code">
+                        <input style="display: none;" name="password" id="password" type="password" placeholder="Enter your password">
                     </div>
-                    <div class="profile-info">
-                        <h2>Member Member</h2>
-                        <p>Member Since 2022</p>
-                        <img src="https://cdn-icons-png.flaticon.com/512/5957/5957125.png">
-                        <h4>18,986 reward points</h4>
+                </div>
+                <div class="btm-row">
+                    <button id="authbutton" type="button" onclick="authCode()">Request Two-Factor Code</button>
+                    <svg id="loader" viewBox="25 25 50 50">
+                        <circle r="20" cy="50" cx="50"></circle>
+                      </svg>
+                </div>
+            </form>
+            <div class="no-acc">
+                <h1>Forgotten Password</h1>
+                <p>We'll need to verify you're information before you can <br>regain access to your account</p>
+                <div class="why">
+                    <i class="fa-solid fa-lock"></i>
+                    <div class="why-text">
+                        <h3>Security is our priority</h2>
+                        <p>We'll need to send you a verification code to authenticate you</p>
+                    </div>
+                </div>
+                <div class="why">
+                    <i class="fa-solid fa-key"></i>
+                    <div class="why-text">
+                        <h3>Password Reset</h2>
+                        <p>Once authenticated, you'll be prompted to reset your password</p>
                     </div>
                 </div>
             </div>
@@ -104,4 +127,36 @@
 </body>
 <script src="src/js/bundle.js"></script>
 <script type="text/javascript" src="src/js/index.js"></script>
+<script type="text/javascript" src="src/js/account.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js"></script>
+<script>
+  (function () {
+    emailjs.init("b9K10bIZxj5olBpvN"); //use your USER ID
+  })();
+  function authCode() {
+    document.getElementById("authbutton").disabled = "true"
+    var email = document.getElementById("email").value;
+    getAccount(email).then(function(doc) {
+        code = Math.floor(Math.random() * 1000000);
+        if(!doc.error){
+            document.getElementById("loader").style.display = "block"
+            /*emailjs.send("service_qxg43si","template_62yakn2",{
+                to_name: doc.name,
+                message: Math.floor(Math.random() * 1000000),
+                email_to: doc._id,
+            });*/
+            setTimeout (function() {
+                document.getElementById("loader").style.display = "none"
+                document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
+                document.getElementById("email-label").innerHTML = "Verification Code"
+                document.getElementById("email").style.display = "none"
+                document.getElementById("code").style.display = "block"
+                document.getElementsByClassName("btm-row")[0].innerHTML = "<button type='button' onclick='isAuth(" + code + ", \"" + email.replace(/"/g, "\\\"") + "\")'>Authenticate</button><svg viewBox='25 25 50 50'><circle r='20' cy='50' cx='50'></circle></svg>";
+            }, 4000);
+        } else {
+            document.getElementById("description").innerHTML = "We couldn't find an account with that email address. <br>Please try again"
+        }
+        });
+    }
+</script>
 </html>
