--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
-                            <a href="login.html">Account</a>
+                            <a id="account" href="login.html">Account</a>
                         </div>
                     </div>
                 </div>
@@ -77,9 +77,9 @@
                           <i id="support-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="support">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                          <a href="about.html">About</a>
+                          <a href="contact.html">Contact Us</a>
+                          <a href="faq.html">FAQ</a>
                         </div>
                     </div> 
                 </div>
