--- a/register.html
+++ b/register.html
@@ -37,7 +37,7 @@
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
-                            <a href="account.html">Account</a>
+                            <a id="account" href="login.html">Account</a>
                         </div>
                     </div>
                 </div>
@@ -90,7 +90,7 @@
         <div class="login-form">
             <form class="login">
                 <h1>Register Now</h1>
-                <p>Enter the information requested below to create your account</p>
+                <p id="description">Enter the information requested below to create your account</p>
                 <div class="inputs">
                     <div class="input names">
                         <div class="first">
