--- a/login.html
+++ b/login.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f7c8be4779.js" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="src/js/index.js"></script>
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
         <link rel="stylesheet" href="src/css/login.css">
@@ -36,7 +35,7 @@
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
-                            <a href="account.html">Account</a>
+                            <a id="account" href="login.html">Account</a>
                         </div>
                     </div>
                 </div>
@@ -89,7 +88,7 @@
         <div class="login-form">
             <form class="login">
                 <h1>Sign In</h1>
-                <p>Enter your credentials below to be taken to the dashboard</p>
+                <p id="description">Enter your credentials below to be taken to the dashboard</p>
                 <div class="inputs">
                     <div class="input">
                         <label for="email">Email Address</label>
@@ -101,7 +100,7 @@
                     </div>
                 </div>
                 <div class="btm-row">
-                    <button>Sign In</button>
+                    <button type="button" onclick="login();">Sign In</button>
                     <a href="forgot-password.html">Forgot Password?</a>
                 </div>
             </form>
@@ -137,4 +136,7 @@
         </div>
     </div>
 </body>
+<script src="./src/js/bundle.js"></script>
+<script type="text/javascript" src="src/js/index.js"></script>
+<script type="text/javascript" src="src/js/account.js"></script>
 </html>
