--- a/forgot-password.html
+++ b/forgot-password.html
@@ -16,9 +16,9 @@
         <div class="navbar">
             <div class="navbar-top">
                 <div class="upper-nav-content">
-                    <a>Track an Order</a>
+                    <a href="track-order.html">Track an Order</a>
                     <a>Français</a>
-                    <a>Change Region</a>
+                    <a id="region">Change Region</a>
                 </div>
                 <div class="lower-nav-content">
                     <a href="index.html"><div class="logo">
@@ -43,7 +43,7 @@
             <div class="navbar-bottom">
                 <div class="links">
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('products');">Products
+                        <button class="dropbtn" id="products-btn">Products
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
@@ -53,17 +53,7 @@
                         </div>
                     </div> 
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('brands');">Brands
-                          <i id="brands-caret" class="fa-solid fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content" id="brands">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
-                    </div> 
-                    <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('services');">Services
+                        <button class="dropbtn" id="services-btn">Services
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
@@ -73,7 +63,7 @@
                         </div>
                     </div> 
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('support');">Support
+                        <button class="dropbtn" id="support-btn">Support
                           <i id="support-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="support">
@@ -99,6 +89,8 @@
                 </div>
                 <div class="btm-row">
                     <button id="authbutton" type="button" onclick="authCode()">Request Two-Factor Code</button>
+                    <button style="display: none;" type='button' id='authenticate'>Authenticate</button>
+                    <button style="display: none;" type='button' id='reset-password'>Reset Password</button>
                     <svg id="loader" viewBox="25 25 50 50">
                         <circle r="20" cy="50" cx="50"></circle>
                       </svg>
@@ -126,8 +118,8 @@
     </div>
 </body>
 <script src="src/js/bundle.js"></script>
-<script type="text/javascript" src="src/js/index.js"></script>
-<script type="text/javascript" src="src/js/account.js"></script>
+<script type="module" src="src/js/index.js"></script>
+<script type="module" src="src/js/account.js"></script>
 <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.4.0/dist/email.min.js"></script>
 <script>
   (function () {
@@ -136,27 +128,28 @@
   function authCode() {
     document.getElementById("authbutton").disabled = "true"
     var email = document.getElementById("email").value;
-    getAccount(email).then(function(doc) {
-        code = Math.floor(Math.random() * 1000000);
-        if(!doc.error){
-            document.getElementById("loader").style.display = "block"
-            /*emailjs.send("service_qxg43si","template_62yakn2",{
-                to_name: doc.name,
-                message: Math.floor(Math.random() * 1000000),
-                email_to: doc._id,
-            });*/
-            setTimeout (function() {
-                document.getElementById("loader").style.display = "none"
-                document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
-                document.getElementById("email-label").innerHTML = "Verification Code"
-                document.getElementById("email").style.display = "none"
-                document.getElementById("code").style.display = "block"
-                document.getElementsByClassName("btm-row")[0].innerHTML = "<button type='button' onclick='isAuth(" + code + ", \"" + email.replace(/"/g, "\\\"") + "\")'>Authenticate</button><svg viewBox='25 25 50 50'><circle r='20' cy='50' cx='50'></circle></svg>";
-            }, 4000);
-        } else {
-            document.getElementById("description").innerHTML = "We couldn't find an account with that email address. <br>Please try again"
-        }
-        });
+    code = Math.floor(Math.random() * 1000000);
+    localStorage.setItem("auth-code", code)
+    // check localstorage to see if email exists
+    if(JSON.parse(localStorage.getItem('accounts')).find(account => account.email == email) != undefined) {
+        document.getElementById("loader").style.display = "block"
+        /*emailjs.send("service_qxg43si","template_62yakn2",{
+            to_name: doc.name,
+            message: code,
+            email_to: doc._id,
+        });*/
+        setTimeout (function() {
+            document.getElementById("loader").style.display = "none"
+            document.getElementById("description").innerHTML = "We've sent you a verification code to your email. <br>Please enter it below to continue"
+            document.getElementById("email-label").innerHTML = "Verification Code"
+            document.getElementById("email").style.display = "none"
+            document.getElementById("code").style.display = "block"
+            document.getElementById("authbutton").style.display = "none"
+            document.getElementById("authenticate").style.display = "block"
+        }, 4000);
+    } else {
+        document.getElementById("description").innerHTML = "We couldn't find an account with that email address. <br>Please try again"
+    }
     }
 </script>
 </html>
