--- a/register.html
+++ b/register.html
@@ -6,7 +6,6 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.cdnfonts.com/css/product-sans" rel="stylesheet">
         <script src="https://kit.fontawesome.com/f7c8be4779.js" crossorigin="anonymous"></script>
-        <script type="text/javascript" src="src/js/index.js"></script>
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
         <link rel="stylesheet" href="src/css/login.css">
@@ -18,9 +17,9 @@
         <div class="navbar">
             <div class="navbar-top">
                 <div class="upper-nav-content">
-                    <a>Track an Order</a>
+                    <a href="track-order.html">Track an Order</a>
                     <a>Français</a>
-                    <a>Change Region</a>
+                    <a id="region">Change Region</a>
                 </div>
                 <div class="lower-nav-content">
                     <a href="index.html"><div class="logo">
@@ -45,7 +44,7 @@
             <div class="navbar-bottom">
                 <div class="links">
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('products');">Products
+                        <button class="dropbtn" id="products-btn">Products
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
@@ -55,17 +54,7 @@
                         </div>
                     </div> 
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('brands');">Brands
-                          <i id="brands-caret" class="fa-solid fa-caret-down"></i>
-                        </button>
-                        <div class="dropdown-content" id="brands">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
-                        </div>
-                    </div> 
-                    <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('services');">Services
+                        <button class="dropbtn" id="services-btn">Services
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
@@ -75,7 +64,7 @@
                         </div>
                     </div> 
                     <div class="dropdown">
-                        <button class="dropbtn" onclick="myFunction('support');">Support
+                        <button class="dropbtn" id="support-btn">Support
                           <i id="support-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="support">
@@ -126,7 +115,7 @@
                     </div>
                 </div>
                 <div class="btm-row">
-                    <button type="button" onclick="validateRegister()">Register</button>
+                    <button type="button" id="register">Register</button>
                 </div>
             </form>
             <div class="no-acc">
@@ -158,7 +147,8 @@
     </div>
 </body>
 <script src="src/js/bundle.js"></script>
-<script src="src/js/account.js"></script>
+<script type="module" src="src/js/index.js"></script>
+<script type="module" src="src/js/account.js"></script>
 <script>
     document.getElementById("password").addEventListener("focus", function() {
         document.getElementById("pass").style.display = "block";
