Account webpage modifications

--- a/account.html
+++ b/account.html
@@ -89,6 +89,36 @@
                     </div>
                 </div>
             </div>
+            <div class="quick-access">
+                <h2>Quick Access</h2>
+                <p>Perform quick changes on your account</p>
+                <div class="card-row">
+                    <div id="order-history" class="access-card">
+                        <div class="access-content">
+                            <i id="card-icon" class="fa-solid fa-clock-rotate-left"></i>
+                            <h3>Order History</h3>
+                            <p>View all previous orders placed on your account. Tracking is also available here.</p>
+                            <a>View More <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                    <div id="payment-info" class="access-card">
+                        <div class="access-content">
+                            <i id="card-icon" class="fa-solid fa-credit-card"></i>
+                            <h3>Payment Information</h3>
+                            <p>Manage your cards on file for a smoother checkout process.</p>
+                            <a>View More <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                    <div id="personal-info" class="access-card">
+                        <div class="access-content">
+                            <i id="card-icon" class="fa-solid fa-circle-user"></i>
+                            <h3>Personal Information</h3>
+                            <p>Modify personal account details like email, shipping address, and delivery preferences.</p>
+                            <a>View More <i class="fa-solid fa-arrow-right"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </body>
