--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
                 </div>
                 <div class="card-text">
                     <h2>Sustainable</h2>
-                    <p>We believe in fair and affordable prices for everyone. GoodWire offers the lowest prices guaranteed. If you find a competing retailer with lower prices we will match the price and apply an additional 10% off your purchase.</p>
+                    <p>We’re using sun and wind to power our facilities. We have also committed to a net-zero emission fleet, this means that your deliveries are contributing to a healthier and happier planet!</p>
                 </div>
                 <div class="card-button">
                     <a href="index.html">Shop Now</a>
@@ -75,8 +75,8 @@
                 <div class="card-text">
                     <h2>Accessibility</h2>
                     <p>
-                        We believe in fair and affordable prices for everyone. GoodWire offers the lowest prices guaranteed. 
-                        If you find a competing retailer with lower prices we will match the price and apply an additional 10% off your purchase.
+                        At GoodWire, we believe in providing accessible sevice to <strong>everyone</strong> that uses our services. Our website
+                        dynamically adapts to your preferences as a customer for a more enjoyable shopping experience.
                     </p>
                 </div>
                 <div class="card-button">
