--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <div class="right-content">
                         <div class="cart">
                             <i class="fa-solid fa-shopping-cart"></i>
-                            <a>Cart</a>
+                            <a href="cart.html">Cart</a>
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
@@ -48,9 +48,7 @@
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                          <a href="#">View All</a>
                         </div>
                     </div> 
                     <div class="dropdown">
@@ -58,9 +56,8 @@
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                            <a href="#">Technical Support</a>
+                            <a href="#">Warranty</a>
                         </div>
                     </div> 
                     <div class="dropdown">
