--- a/forgot-password.html
+++ b/forgot-password.html
@@ -31,7 +31,7 @@
                     <div class="right-content">
                         <div class="cart">
                             <i class="fa-solid fa-shopping-cart"></i>
-                            <a>Cart</a>
+                            <a href="cart.html">Cart</a>
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
@@ -47,9 +47,7 @@
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                          <a href="#">View All</a>
                         </div>
                     </div> 
                     <div class="dropdown">
@@ -57,9 +55,8 @@
                           <i id="services-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="services">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                            <a href="#">Technical Support</a>
+                            <a href="#">Warranty</a>
                         </div>
                     </div> 
                     <div class="dropdown">
@@ -67,9 +64,9 @@
                           <i id="support-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="support">
-                          <a href="#">Link 1</a>
-                          <a href="#">Link 2</a>
-                          <a href="#">Link 3</a>
+                          <a href="about.html">About</a>
+                          <a href="contact.html">Contact Us</a>
+                          <a href="faq.html">FAQ</a>
                         </div>
                     </div> 
                 </div>
