Adjusted some descriptions

--- a/cart.html
+++ b/cart.html
@@ -107,7 +107,7 @@
         </div>
         <div id="cag" class="continue-as-guest">
             <h1>Continue as Guest?</h1>
-            <p>You aren't signed in which means you won't get the benefits that members get with this purchase. Do you want to continue as guest or log-in now?</p>
+            <p>You aren't signed in which means you won't get acces to the benefits that members get with this purchase. Do you want to continue as guest or log-in now?</p>
             <div class="btn-row">
                 <button id="login-btn" class="login">Log In</button>
                 <button id="guest-btn" class="guest">Continue as Guest</button>
