--- a/account.html
+++ b/account.html
@@ -9,7 +9,7 @@
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
         <link rel="stylesheet" href="src/css/account.css">
-        <script src="cart.js"></script>
+        <script type="text/javascript" src="cart.js"></script>
         <title>GoodWire | Account</title>
     </head>
     <body>
