--- a/cart.html
+++ b/cart.html
@@ -31,7 +31,7 @@
                     <div class="right-content">
                         <div class="cart">
                             <i class="fa-solid fa-shopping-cart"></i>
-                            <a href="cart.html">Cart</a>
+                            <a href="cart.html"></a>
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
