--- a/account.html
+++ b/account.html
@@ -32,7 +32,9 @@
                     <div class="right-content">
                         <div class="cart">
                             <i class="fa-solid fa-shopping-cart"></i>
-                            <a href="cart.html">Cart</a>
+                            <a href="cart.html">
+                                <ion-icon name="basket"></ion-icon>Cart <span>0</span>
+                            </a>
                         </div>
                         <div class="account">
                             <i class="fa-solid fa-user"></i>
