--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                           <i id="products-caret" class="fa-solid fa-caret-down"></i>
                         </button>
                         <div class="dropdown-content" id="products">
-                          <a href="#">View All</a>
+                          <a href="products.html">View All</a>
                         </div>
                     </div> 
                     <div class="dropdown">
