--- a/account.html
+++ b/account.html
@@ -9,7 +9,6 @@
         <link rel="icon" href="src/img/logo.png" type="image/png">
         <link rel="stylesheet" href="src/css/index.css">
         <link rel="stylesheet" href="src/css/account.css">
-        <script type="text/javascript" src="cart.js"></script>
         <title>GoodWire | Account</title>
     </head>
     <body>
@@ -126,4 +125,5 @@
 <script src="src/js/bundle.js"></script>
 <script type="module" src="src/js/index.js"></script>
 <script type="module" src="src/js/account.js"></script>
+<script type="text/javascript" src="src/js/cart.js"></script>
 </html>
