--- a/cart.html
+++ b/cart.html
@@ -119,4 +119,5 @@
 </body>
 <script type="module" src="src/js/index.js"></script>
 <script type="module" src="src/js/account.js"></script>
+<script type="text/javascript" src="src/js/cart.js"></script>
 </html>
