--- a/products.html
+++ b/products.html
@@ -76,4 +76,5 @@
 </body>
 <script type="module" src="src/js/index.js"></script>
 <script type="module" src="src/js/account.js"></script>
+<script type="module" src="src/js/cart.js"></script>
 </html>
