--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>GoodWire | Home</title>
 </head>
 <body>
+    </div>
     <div class="index">
         <div class="navbar">
             <div class="navbar-top">
@@ -76,7 +77,9 @@
             </div>
         </div>
         <div class="index-content">
-
+            <h1 class="logo-header">
+                <span class="logo">Good</span><span class="logo">Wire</span>
+                 </h1>
         </div>
     </div>
 </body>
