--- a/products.html
+++ b/products.html
@@ -81,7 +81,7 @@
         <div class="products-grid">
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/iphone.jpg"></a>
                 <div class="name">Iphone 12</div>
                 <div class="tools">900$</div>
 
@@ -94,7 +94,7 @@
             </div>
             
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/galaxy.jpg"></a>
                 <div class="name">Samsung Galaxy</div>
                 <div class="tools">800$</div>
 
@@ -108,7 +108,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/pixel_phone.jpg"></a>
                 <div class="name">Google Pixel Phone</div>
                 <div class="tools">700$</div>
 
@@ -122,7 +122,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/ipad.jpg"></a>
                 <div class="name">Apple Ipad</div>
                 <div class="tools">400$</div>
 
@@ -136,7 +136,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/samsung_tablet.jpg"></a>
                 <div class="name">Samsung Tablet</div>
                 <div class="tools">250$</div>
 
@@ -150,7 +150,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/pixel_tablet.jpg"></a>
                 <div class="name">Google Pixel Tablet</div>
                 <div class="tools">300$</div>
 
@@ -164,7 +164,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/mac_pro.jpg"></a>
                 <div class="name">Apple Macbook Pro</div>
                 <div class="tools">1800$</div>
 
@@ -178,7 +178,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/mac_air.jpg"></a>
                 <div class="name">Apple Macbook Air</div>
                 <div class="tools">1200$</div>
 
@@ -192,7 +192,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/xps.jpeg"></a>
                 <div class="name">Dell XPS 15</div>
                 <div class="tools">1300$</div>
 
@@ -206,7 +206,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/airpods_pro.jpg"></a>
                 <div class="name">Apple Airpods Pro</div>
                 <div class="tools">250$</div>
 
@@ -221,7 +221,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/airpods_max.jpg"></a>
                 <div class="name">Apple Airpods Max</div>
                 <div class="tools">600$</div>
 
@@ -235,7 +235,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/beats.jpg"></a>
                 <div class="name">Beats Studio</div>
                 <div class="tools">300$</div>
 
@@ -249,7 +249,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/lg_tv.jpg"></a>
                 <div class="name">56 Inch LG Smart TV</div>
                 <div class="tools">600$</div>
 
@@ -263,7 +263,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/lg_curved.jpg"></a>
                 <div class="name">56 Inch LG Smart TV Curved</div>
                 <div class="tools">800$</div>
 
@@ -277,7 +277,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/samsung_tv.jpg"></a>
                 <div class="name">Samsung 86 Inch Curved Ultrawide Smart TV </div>
                 <div class="tools">1300$</div>
 
@@ -291,7 +291,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/apple_watch.jpg"></a>
                 <div class="name">Apple Smart Watch</div>
                 <div class="tools">400$</div>
 
@@ -306,7 +306,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/samsung_watch.png"></a>
                 <div class="name">Samsung Galaxy Smart Watch</div>
                 <div class="tools">300$</div>
 
@@ -320,7 +320,7 @@
 
 
             <div class="product">
-                <img src="src/img/logo.png"></a>
+                <img src="src/img/pixel_watch.jpg"></a>
                 <div class="name">Google Pixel Smart Watch</div>
                 <div class="tools">350$</div>
 
